[project]
name = "langchain-notes"
version = "0.1.0"
description = ""
authors = [
    {name = "Conrad",email = "r06942143@ntu.edu.tw"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain (>=0.3.15,<0.4.0) ; python_version >= \"3.12\" and python_version < \"4.0\"",
    "langchain-core (>=0.3.31,<0.4.0) ; python_version >= \"3.12\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
poethepoet = "^0.32.1"
ruff = "^0.9.2"

[tool.ruff]
# Enable pycodestyle ('E'), pyflakes ('F'), and import sorting ('I')
select = ["E", "F", "I"]

# Same as Black.
line-length = 88

# Assume Python 3.12
target-version = "py312"

[tool.ruff.per-file-ignores]
# Ignore `F401` (unused imports) in all `__init__.py` files
"__init__.py" = ["F401"]


[tool.poe.tasks]
typecheck = "mypy ."
lint = "ruff check ."
lint-fix = "ruff check . --fix"